TenchoLab-ELB.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  BlogPreSharedKey:
    Type: String
    Default: 2lv8anVLc
Resources:
  TenchoLabSGELB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SG-ELB
      GroupDescription: SG-ELB
      VpcId: !ImportValue VPC-Id
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
  TenchoLabACMELB:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: elb.aws.tencho-lab.net
      ValidationMethod: DNS
      DomainValidationOptions:
        - DomainName: elb.aws.tencho-lab.net
          HostedZoneId: !ImportValue Route53-AwsTenchoLabNetHostZoneId
      Tags:
        - Key: Name
          Value: ELB-Default
  
  TenchoLabELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: tencholab-lb
      Type: application
      Scheme: internet-facing
      SecurityGroups:
        - !Ref TenchoLabSGELB
      Subnets:
        - !ImportValue VPC-PublicSubnetIdDHCPA
        - !ImportValue VPC-PublicSubnetIdDHCPC
        - !ImportValue VPC-PublicSubnetIdDHCPD
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !ImportValue S3-ELBLog
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
        - Key: deletion_protection.enabled
          Value: false
  
  TenchoLabELBCloudMapServiceZabbix:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: zabbix
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 60
        NamespaceId: !ImportValue CloudMap-NameSpaceId
  TenchoLabELBCloudMapServiceOriginBlog:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: origin.blog
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 60
        NamespaceId: !ImportValue CloudMap-NameSpaceId

  TenchoLabELBHTTPListner:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref TenchoLabELB
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: "redirect"
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: "HTTP_301"
  TenchoLabELBHTTPSListner:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref TenchoLabELB
      Protocol: HTTPS
      Port: 443
      Certificates:
        - CertificateArn: !Ref TenchoLabACMELB
      DefaultActions:
        - Type: "fixed-response"
          FixedResponseConfig:
            StatusCode: 503
  TenchoLabELBHTTPSListnerCertificates:
    Type: AWS::ElasticLoadBalancingV2::ListenerCertificate
    Properties:
      ListenerArn: !Ref TenchoLabELBHTTPSListner
      Certificates:
        - CertificateArn: !ImportValue System-Blog-ACM-ELB
        - CertificateArn: !ImportValue System-Zabbix-ACM-ELB

  TenchoLabELBListnerRuleBlog:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref TenchoLabELBHTTPSListner
      Priority: 1
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !ImportValue System-Blog-ELB-TargetGroup
      Conditions:
        - Field: http-header
          HttpHeaderConfig:
            HttpHeaderName: X-Via-Location
            Values:
              - origin.blog.aws.tencho-lab.net
        - Field: http-header
          HttpHeaderConfig:
            HttpHeaderName: X-Pre-Shared-Key
            Values:
              - !Ref BlogPreSharedKey
  TenchoLabELBListnerRuleBlogLocal:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref TenchoLabELBHTTPSListner
      Priority: 2
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !ImportValue System-Blog-ELB-TargetGroup
      Conditions:
        - Field: host-header
          HostHeaderConfig:
            Values:
              - blog.tencho-lab.net
        - Field: source-ip
          SourceIpConfig:
            Values:
              - !ImportValue VPC-Cidr
Outputs:
  TenchoLabELBSG:
    Value: !Ref TenchoLabSGELB
    Export:
      Name: ELB-DefaultSG
  TenchoLabELBHTTPSListener:
    Value: !Ref TenchoLabELBHTTPSListner
    Export:
      Name: ELB-HTTPSListener
  TenchoLabELBDNSName:
    Value: !GetAtt TenchoLabELB.DNSName
    Export:
      Name: ELB-DNSName
  TenchoLabELBCanonicalHostedZoneID:
    Value: !GetAtt TenchoLabELB.CanonicalHostedZoneID
    Export:
      Name: ELB-CanonicalHostedZoneID
